engine-net-2/tests/negative/NegInNeg2.grs
new graph negative\NegInNeg2.grg

show num nodes
show num edges
xgrs init
show num nodes
show num edges
xgrs [neginneg]
show num nodes
show num edges
quit
